# api-recommendation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  services.py
app/core/: __init__.py  config.py
app/database/: __init__.py  database.py  models.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  services.py
scripts/: test_config.py  test_google_api.py
tests/: test_bd_integration.py  test_main.py
